[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlier-detection-tutorials"
version = "1.0.0"
description = "Course-friendly implementations and benchmarks for outlier detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Saurav Singla"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]
modern = [
  "pyod>=2.0,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
